<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version>
        <relativePath/>
    </parent>

    <groupId>Lv-427.Java</groupId>
    <artifactId>greencity</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>Green City</name>
    <description>Project named Green City by SoftServe ITA team Lv-427.Java</description>
    <packaging>pom</packaging>

    <modules>
        <module>service-api</module>
        <module>dao</module>
        <module>core</module>
        <module>service</module>
    </modules>

    <properties>
        <spring.boot.version>3.2.2</spring.boot.version>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <junit-jupiter.version>5.10.2</junit-jupiter.version>
        <mockito-junit-jupiter.version>5.10.0</mockito-junit-jupiter.version>
        <mockito-core.version>5.10.0</mockito-core.version>
        <mockito-inline.version>5.2.0</mockito-inline.version>
        <modelmapper.version>3.2.0</modelmapper.version>
        <checkstyle-maven-plugin.version>3.3.1</checkstyle-maven-plugin.version>
        <formatter.maven.plugin.version>2.23.0</formatter.maven.plugin.version>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
        <sonar.exclusions>**/config/*</sonar.exclusions>
        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <sonar.language>java</sonar.language>
        <sonar.organization>greencity-ua-1352-02</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <test.containers.version>1.19.4</test.containers.version>
        <maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
        <jacoco.maven.plugin.version>0.8.11</jacoco.maven.plugin.version>
        <net.java.dev.jna.version>5.14.0</net.java.dev.jna.version>
        <jjwt.version>0.12.5</jjwt.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.maven.plugin.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/config/*</exclude>
                        <exclude>**/enums/*</exclude>
                        <exclude>**/exceptions/*</exclude>
                        <exclude>**/entity/*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>default-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <forkedProcessExitTimeoutInSeconds>120</forkedProcessExitTimeoutInSeconds>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>${formatter.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>validate</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configFile>${project.basedir}/../formatter.xml</configFile>
                    <lineEnding>LF</lineEnding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
